# Application-Samples

./: .gitignore  README.md  build.ps1  new-sample.ps1
Jetson Kit samples/Demosaic Sample/: depacking_cpu.cpp  jetson_sample
Jetson Kit samples/GPIO samples/: Mapping_table.md  Readme.md  Readme.txt  blinky.py  bmp280_i2c.py  bmp280_spi.py  polling_button.py  simple_input.py  uart_loopback.py  uart_p2p_jetson.py  uart_p2p_pc.py
cmake/: FindXIMEA.cmake  SampleDefaults.cmake
samples/acquisition/capture-10-images/c/: CMakeLists.txt  README.md  main.c
samples/acquisition/capture-10-images/cpp/: CMakeLists.txt  README.md  main.cpp
samples/acquisition/capture-10-images/csharp/: CaptureImages.csproj  Program.cs  README.md
samples/acquisition/capture-10-images/python/: README.md  main.py
samples/jetson-kit/Demosaic Sample/: Makefile  depacking.cu  depacking.h  main.cpp  time_measurement.h
samples/jetson-kit/GPIO samples/: Mapping_table.md  Readme.md  blinky.py  install_libi2c.sh  requirements.txt  simple_input.py  uart_loopback.py
